--- a/app/config/parameters.yml
+++ b/app/config/parameters.yml
@@ -3,8 +3,8 @@ parameters:
     database_host: 127.0.0.1
     database_port: null
     database_name: hackathon2
-    database_user: root
-    database_password: Wild3r
+    database_user: wilder
+    database_password: "08041990"
     mailer_transport: smtp
     mailer_host: 127.0.0.1
     mailer_user: null
